syntax = "proto3";
package services.v2;
option go_package = "paradigm-ehb/agent/proto/services/v2";

service HandlerService {
  rpc UnitAction (ServiceActionRequest) returns (ServiceActionReply) {}
}

message ServiceActionRequest  {

  string service_name = 1;

  enum UnitAction {
    UNIT_ACTION_UNSPECIFIED = 0;
    UNIT_ACTION_START = 1;
    UNIT_ACTION_STOP = 2;
    UNIT_ACTION_RESTART = 3;
  }
  enum UnitFileAction {

    UNIT_FILE_ACTION_UNSPECIFIED  = 0;
    UNIT_FILE_ACTION_ENABLE  = 1;
    UNIT_FILE_ACTION_DISABLE = 2;
  }
  optional UnitAction unit_action = 2;
  optional UnitFileAction unit_file_action = 3;
}

message ServiceActionReply {
  bytes status = 1;
}
